fix githubscanner
